fixed spacing issue on design sprints

--- a/src/app/style/common.style.scss
+++ b/src/app/style/common.style.scss
@@ -1128,7 +1128,7 @@ a:hover, a:focus, a:visited{
 }
 
 .workshop{
-	padding-top: 160px;
+	padding-top: 60px;
     background: white;
 
 	h3 {
@@ -1251,7 +1251,7 @@ a:hover, a:focus, a:visited{
 }
 
 .bootcamp{
-	padding-top: 180px;
+	padding-top: 60px;
     padding-bottom: 180px;
     z-index: 3;
     position: relative;
